<resources>
    <string name="app_name">Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <!-- Strings used for fragments for item -->
    <string name="title_item_detail">Item Detail</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >1 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="settings_title_server">Server</string>
    <string name="settings_title_sound">Sound</string>
    <string name="settings_title_alert">Alert</string>

    <!-- server Preferences -->
    <string name="settings_server_ip">IP</string>

    <!-- sound Preferences -->
    <string name="settings_sound_server_ip">IP</string>
    <string name="settings_sound_server_port">Port</string>
    <string name="settings_sound_local_port">Local Port </string>

    <!-- Alert Preferences -->
    <string name="settings_alert_ring">Ring</string>
    <string name="settings_alert_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>